# deep-sdk

./: README.md
.github/workflows/: ci.yml
docs/: reqfiles.md  requirements.md  stat_expressions.md
py/: Cargo.toml  deepwoken.pyi  pyproject.toml
py/src/: lib.rs
rust/: Cargo.toml  pull-static-data.py  pull-static-data.sh
rust/assets/: all.json
rust/src/: constants.rs  error.rs  formulas.rs  lib.rs
rust/src/model/: aggregate.rs  data.rs  enums.rs  formula.rs  mod.rs  opt.rs  req.rs  reqfile.rs  stat.rs  wiki.rs
rust/src/parse/: mod.rs  req.rs  reqfile.rs  tests.rs
rust/src/util/: aggregate.rs  algos.rs  datafetch.rs  graph.rs  mod.rs  pips.rs  reqtree.rs  statmap.rs  traits.rs
ts/: Cargo.toml  build.rs  generated.ts  index.ts  package.json  requirement.ts  types.ts
ts/src/: lib.rs
