[package]
name = "deepwoken"
version = "0.1.3"
edition = "2024"
description = "A library for interacting with Deepwoken data in a more convenient format, with a few added utilities."
license = "MIT"
repository = "https://github.com/pocamind/deep-sdk"

[dependencies]
env_logger = "0.11.9"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
winnow = "0.7.14"

[features]
fetch = ["dep:reqwest"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", optional = true, default-features = false, features = ["rustls-tls", "json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json"] }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
