[package]
name = "deepwoken"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
deepwoken-rs = { package = "deepwoken", path = "../rust", features = ["fetch"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
